# operator-converter

./: .gitignore  README.md  pyproject.toml  test.py
opconverter/: __init__.py  _ast_parser.py  _constants.py  _helpers.py  _import_helper.py  api.py  typeshack.py
opconverter/_ast_parse/: __init__.py  _constants.py  _helpers.py  abstract.py  attr.py  operators.py  parser.py
opconverter/ast_parse/: __init__.py  _constants.py  _helpers.py  abstract.py  attr.py  import_helper.py  item.py  operators.py  parser.py
